// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should check all children and check parent 1`] = `
<div>
  <Checkbox
    checked={true}
    id="parent"
    label="parent"
    onChange={[Function]}
    required={false}
  />
  <Checkbox.Group
    required={false}
  >
    <Checkbox
      checked={true}
      id="myCheckBoxGroup[0]"
      key="checkbox-0"
      label="First"
      name="myCheckBoxGroup[0]"
      onChange={[Function]}
      required={false}
      value="one"
    />
    <Checkbox
      checked={true}
      id="myCheckBoxGroup[1]"
      key="checkbox-1"
      label="Second"
      name="myCheckBoxGroup[1]"
      onChange={[Function]}
      required={false}
      value="two"
    />
  </Checkbox.Group>
</div>
`;

exports[`should check one child 1`] = `
<div>
  <Checkbox
    checked={false}
    id="parent"
    label="parent"
    onChange={[Function]}
    required={false}
  />
  <Checkbox.Group
    required={false}
  >
    <Checkbox
      checked={true}
      id="myCheckBoxGroup[0]"
      key="checkbox-0"
      label="First"
      name="myCheckBoxGroup[0]"
      onChange={[Function]}
      required={false}
      value="one"
    />
    <Checkbox
      checked={false}
      id="myCheckBoxGroup[1]"
      key="checkbox-1"
      label="Second"
      name="myCheckBoxGroup[1]"
      onChange={[Function]}
      required={false}
      value="two"
    />
  </Checkbox.Group>
</div>
`;

exports[`should render a CheckBoxGroup, no children 1`] = `
<div>
  <Checkbox
    checked={false}
    id="parent"
    label="parent"
    onChange={[Function]}
    required={false}
  />
</div>
`;
